# python_simple

./: README.md  pyproject.toml
initial_project_name/: main.py
scripts/: initial_install.sh
